--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/oswald": "^5.0.17",
+		"@fontsource/noto-sans": "^5.0.17"
+	}
 }
