--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@fontsource-variable/oswald": "^5.0.17",
 		"@fontsource/noto-sans": "^5.0.17",
+		"@lottiefiles/svelte-lottie-player": "^0.3.0",
 		"@vimeo/player": "^2.20.1"
 	}
 }
