--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@fontsource-variable/oswald": "^5.0.17",
 		"@fontsource/noto-sans": "^5.0.17",
 		"@lottiefiles/svelte-lottie-player": "^0.3.0",
-		"@vimeo/player": "^2.20.1"
+		"@vimeo/player": "^2.20.1",
+		"svelte-inview": "^4.0.1"
 	}
 }
